Adjusting markup to allow full width ad div, removing Foundation show-for-medium-up settings that override DFP, styling to avoid collapsing DIV

--- a/assets/css/scss/parts/_homepage.scss
+++ b/assets/css/scss/parts/_homepage.scss
@@ -211,6 +211,7 @@
 		text-align: center;
 		margin: 0 auto;
 		display: block;
+		clear: both;
 	}
 
 	@media (max-width: 769px) {
